<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="209dp"
                        android:layout_height="136dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/icon" />

                    <TextView
                        android:id="@+id/textViewRegisterHere"
                        android:textColor="@android:color/white"
                        android:textStyle="italic"
                        android:layout_width="252dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/registerHere"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView5"
                        app:layout_constraintVertical_bias="0.017" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardView2"
                        android:layout_width="303dp"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/cardview_dark_background"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        app:cardCornerRadius="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView">

                        <EditText
                            android:id="@+id/editTextPassword"
                            android:textColor="@android:color/white"
                            android:layout_width="303dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="8dp"
                            android:ems="10"
                            android:hint="@string/password"
                            android:textColorHint="@color/colorPrimary"
                            android:inputType="textPassword"
                            android:textAlignment="center"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.433"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:layout_editor_absoluteY="216dp" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardView5"
                        app:cardCornerRadius="10dp"
                        android:layout_width="79dp"
                        android:layout_height="40dp"
                        app:cardBackgroundColor="@color/cardview_dark_background"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="84dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.501"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView2">

                        <Button
                            android:id="@+id/buttonLogin"
                            android:layout_width="79dp"
                            android:layout_height="40dp"
                            android:textColor="@color/colorPrimary"
                            android:background="@android:color/transparent"
                            android:text="@string/login"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="302dp" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardView"
                        android:focusable="true"
                        android:layout_width="303dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        app:cardCornerRadius="20dp"
                        app:cardBackgroundColor="@color/cardview_dark_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.508"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3">

                        <EditText
                            android:id="@+id/editTextEmail"
                            android:layout_width="303dp"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/colorPrimary"
                            android:layout_marginStart="0dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginRight="8dp"
                            android:ems="10"

                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:selectAllOnFocus="false"
                            android:singleLine="false"
                            android:textAlignment="center"
                            tools:layout_editor_absoluteX="66dp"
                            tools:layout_editor_absoluteY="146dp" />
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:id="@+id/version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
