<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.v7.widget.CardView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/ic_launcher_round" />
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</LinearLayout>